--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "mediasoup": "^3.19.11",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
