--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ CORS_ORIGIN=https://privatehub.com.br,https://www.privatehub.com.br
 
 # Node Environment
 NODE_ENV=development
+
+REDIS_URL=redis://localhost:6379
