--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
     "dotenv": "^17.2.3",
     "mediasoup": "^3.19.11",
+    "redis": "^5.10.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
