Update MEDIA_SERVER_PORT and MEDIASOUP_ANNOUNCED_IP in .env and .env.example

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ MEDIA_SERVER_PORT=5050
 
 # MediaSoup Configuration
 # Use your server's public IP or domain for production
-MEDIASOUP_ANNOUNCED_IP=sfu.privatehub.com.br
+MEDIASOUP_ANNOUNCED_IP=23.94.50.176
 
 # RTC Port Range (ensure these ports are open in firewall)
 MEDIASOUP_RTC_MIN_PORT=40000
