--- a/files/60-sfu.privatehub.com.br.conf
+++ b/files/60-sfu.privatehub.com.br.conf
@@ -1,7 +1,19 @@
 # nginx.conf - Proxy reverso para mediasoup SFU
+
+# Redirecionamento HTTP para HTTPS
+server {
+    listen 80;
+    server_name sfu.privatehub.com.br;
+    return 301 https://$server_name$request_uri;
+}
+
 server {
     listen 443 ssl;
     server_name sfu.privatehub.com.br;
+
+    # Serve static test page from a simple public folder on the host.
+    # Deploy your site file to: /var/www/privatehub-media/public/test.html
+    root /var/www/privatehub-media/public;
 
     # Configurações SSL
     ssl_certificate /etc/letsencrypt/live/sfu.privatehub.com.br/fullchain.pem;
@@ -10,9 +22,10 @@ server {
     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
     ssl_prefer_server_ciphers off;
 
-    # Configurações de WebSocket e Socket.io
+    # Configurações de WebSocket e Socket.io / proxy para Media Server
+    # All other requests (including /socket.io) are proxied to mediasoup backend
     location / {
-        proxy_pass http://localhost:3000;
+        proxy_pass http://127.0.0.1:5050;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -27,6 +40,16 @@ server {
         proxy_read_timeout 7d;
     }
 
+    # Serve the static test/health page directly from disk (no proxy)
+    location = /test {
+        # Prefer test.html if present under root
+        try_files /test.html =404;
+    }
+
+    location = /health {
+        try_files /test.html =404;
+    }
+
     # Configurações de segurança
     add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
@@ -35,11 +58,4 @@ server {
     # Configurações de buffer para WebRTC
     client_max_body_size 0;
     proxy_buffering off;
-}
-
-# Redirecionamento HTTP para HTTPS
-server {
-    listen 80;
-    server_name sfu.privatehub.com.br;
-    return 301 https://$server_name$request_uri;
 }
